tests/golden/type_errors/sqrt_shadowed_call_non_function.cd
let sqrt = 123;
sqrt(9);
